# pcl_test

./: CMakeLists.txt  README.md  install.sh  pcl_temp.cpp  pcl_test.cpp  room_scan2_transformed.pcd  setup.sh
.vscode_nodebug/: launch.json
.vscode_pcltest/: launch.json  settings.json
Study/: demo.cpp  study.md
Study/00base/: concatenate_clouds.cpp  range_image_creation.cpp  read_pcd.cpp  visualize_complex.cpp  write_pcd.cpp
Study/01search/: octree_search.cpp
Study/03keypoints/: Iss_keypoints.cpp  Sift_keypoints.cpp
Study/04feature/: normal_estimation.cpp  normal_estimation_using_integral_images.cpp  principal_curvatures.cpp
Study/06register/: ipc.cpp
Study/07restruct/: poisson.cpp
Study/feature/: normal_estimation.cpp
data/: concat_cloud.pcd  keypoints_iss_3d.pcd  rabbit_with_normals  test_pcd.pcd
include/: my_point_type.h
scripts/: create_cmake.py
src/: CMakeLists.txt  ex1.cpp  ex3.cpp  pcl_test.cpp
study/: CMakeLists.txt  demo.cpp  study.md
study/00base/: CMakeLists.txt  base.cpp  concatenate_clouds.cpp  visualize_sample.cpp
study/01search/: CMakeLists.txt  kdtree_search.cpp  octree_change_detection.cpp  search.cpp
study/02filter/: CMakeLists.txt
study/04feature/: CMakeLists.txt  fast_point_featur_hist.cpp  principal_curvatures.cpp  principal_curvatures_CMakeLists.txt
study/06register/: CMakeLists.txt  icp.cpp  icp2.cpp  ndt.cpp
study/07restruct/: CMakeLists.txt  poisson.cpp
study/10clustering/: CMakeLists.txt  kmeans.cpp
