cmake_minimum_required(VERSION 2.9)
project(02filter)
set(PCL_DIR "/usr/include/pcl-1/.14",)
find_package(PCL 1.14 REQUIRED)
find_package(VTK REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

add_executable(filter filter.cpp)
target_link_libraries(filter ${PCL_LIBRARIES})
